--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -14,13 +14,14 @@
         <a href="www.linkedin.com/in/kentonmcclure">linkedin</a>
         ||
         <a href="Whimsical_company/about.html">Whimsical_company</a>
+        ||
+        <a href="/itis3135/hobby/index_hob.html">Hobby</a>
         
 </nav>
-        <p>Designed by <a href="/itis3135/Whimsical_company/indexWhim.html">@KindMouse</a></p>
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-        </a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-        </a>
+<p>Copyright &copy; 2025 KentEnto</p>
+<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+
+
+
+        
         
