--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -18,7 +18,7 @@
         <a href="/itis3135/hobby/index_hob.html">Hobby</a>
         
 </nav>
-<p>Copyright &copy; 2025 KentEnto</p>
+<p>Page build by &copy; 2025 KentEnto</p>
 <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 
 
