--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -7,9 +7,33 @@
             <a href="contract.html">Contract</a>
             ||
             <a href="website_evaluation/website_evaluations.html">Website Evaluations</a>
+            ||
+            <a href="byo_intro.html">BYO Intro</a>
 
         </nav>
         ||
         <nav>
             <a href="fartpoop/POOOOOOO ;)PY.htm">crappy</a>
         </nav>
+
+        <style>
+            h1 {
+                font-size: 2em;
+               
+            }
+
+            nav {
+                display: inline-block;
+                margin: 0 10px;
+            }
+
+            nav a {
+                text-decoration: none;
+                color: white;
+                padding: 5px;
+            }
+
+            nav a:hover {
+                text-decoration: underline;
+            }
+        </style>
